Add footer credit and GitHub search link; update README

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main class="hero">
+      <canvas id="bg-canvas" aria-hidden="true"></canvas>
       <div class="overlay"></div>
       <div class="container">
         <header class="brand">
@@ -34,8 +35,15 @@
           </div>
         </section>
 
-        <footer class="footer">Dark, galaxy-style UI • Smooth glassmorphism • LLM-powered</footer>
+        <footer class="footer">
+          <div class="credit">Made by <strong>Riki Nshah</strong></div>
+          <div class="links">
+            <a href="https://github.com/search?q=Riki+Nshah" target="_blank" rel="noopener">Find me on GitHub</a>
+            <!-- You can replace the search link with your exact GitHub profile URL when ready -->
+          </div>
+        </footer>
       </div>
     </main>
+    <script src="/scripts.js" defer></script>
   </body>
 </html>
