Link footer and README to author's GitHub (rikinshah787) and portfolio (rikin.tech)

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,9 @@
         <footer class="footer">
           <div class="credit">Made by <strong>Riki Nshah</strong></div>
           <div class="links">
-            <a href="https://github.com/search?q=Riki+Nshah" target="_blank" rel="noopener">Find me on GitHub</a>
-            <!-- You can replace the search link with your exact GitHub profile URL when ready -->
+            <a href="https://github.com/rikinshah787" target="_blank" rel="noopener">My GitHub</a>
+            <span class="sep">•</span>
+            <a href="https://www.rikin.tech" target="_blank" rel="noopener">Portfolio</a>
           </div>
         </footer>
       </div>
