Add 80% development progress bar with launch date (Nov 27)

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,20 @@
           <div class="left">
             <h1>AI-powered ATS resume builder</h1>
             <p class="lead">Paste a job description and let LLMRESUME craft an ATS-friendly, personalized resume in minutes — in your format.</p>
-            <p class="soon">Coming soon — sign up for early access.</p>
+            
+            <!-- Development Progress Bar -->
+            <div class="progress-section">
+              <div class="progress-header">
+                <span class="progress-label">Development Progress</span>
+                <span class="progress-percent">80%</span>
+              </div>
+              <div class="progress-bar">
+                <div class="progress-fill" style="width: 80%"></div>
+              </div>
+              <p class="launch-info">Expected launch: <strong>November 27, 2025</strong></p>
+            </div>
+
+            <p class="soon">Sign up for early access — be the first to try it!</p>
             <form class="signup" onsubmit="event.preventDefault(); alert('Thanks — you\'ll be notified (placeholder).')">
               <input type="email" placeholder="Enter your email" aria-label="email" required>
               <button type="submit">Notify me</button>
