--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,36 @@
           </div>
           <div class="right">
             <div class="visual">
-              <!-- Placeholder SVG; replace with your image when available -->
-              <img src="/assets/hero.svg" alt="LLMRESUME visual" />
+              <!-- 3D Resume Preview Mockup -->
+              <div class="resume-mockup">
+                <div class="resume-page">
+                  <div class="resume-header">
+                    <div class="resume-name">JOHN DOE</div>
+                    <div class="resume-title">Software Engineer</div>
+                  </div>
+                  <div class="resume-section">
+                    <div class="section-title">EXPERIENCE</div>
+                    <div class="resume-line"></div>
+                    <div class="resume-line short"></div>
+                    <div class="resume-line"></div>
+                  </div>
+                  <div class="resume-section">
+                    <div class="section-title">SKILLS</div>
+                    <div class="skill-pills">
+                      <span class="pill">Python</span>
+                      <span class="pill">React</span>
+                      <span class="pill">AI/ML</span>
+                    </div>
+                  </div>
+                  <div class="resume-section">
+                    <div class="section-title">EDUCATION</div>
+                    <div class="resume-line"></div>
+                    <div class="resume-line short"></div>
+                  </div>
+                  <div class="ats-badge">✓ ATS Optimized</div>
+                </div>
+                <div class="resume-shadow"></div>
+              </div>
             </div>
           </div>
         </section>
