Fix name: Rikin Shah in footer

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
         </section>
 
         <footer class="footer">
-          <div class="credit">Made by <strong>Riki Nshah</strong></div>
+          <div class="credit">Made by <strong>Rikin Shah</strong></div>
           <div class="links">
             <a href="https://github.com/rikinshah787" target="_blank" rel="noopener">My GitHub</a>
             <span class="sep">•</span>
