Update resume mockup: founder profile (Rikin Shah), features, ASU education

--- a/public/index.html
+++ b/public/index.html
@@ -51,27 +51,33 @@
               <div class="resume-mockup">
                 <div class="resume-page">
                   <div class="resume-header">
-                    <div class="resume-name">JOHN DOE</div>
-                    <div class="resume-title">Software Engineer</div>
+                    <div class="resume-name">RIKIN SHAH</div>
+                    <div class="resume-title">Founder & ATS Optimization Architect</div>
                   </div>
                   <div class="resume-section">
                     <div class="section-title">EXPERIENCE</div>
-                    <div class="resume-line"></div>
-                    <div class="resume-line short"></div>
-                    <div class="resume-line"></div>
+                    <p class="resume-text">• Built AI-driven ATS scoring engine (90% model score)</p>
+                    <p class="resume-text">• Launched dual-mode optimizer (LLM + SMART rules)</p>
+                    <p class="resume-text">• Tested 500+ resumes vs job descriptions (Google/Amazon/MS)</p>
+                  </div>
+                  <div class="resume-section">
+                    <div class="section-title">FEATURES</div>
+                    <p class="resume-text">• PRO Mode: Groq LLM bullet refinement</p>
+                    <p class="resume-text">• SMART Mode: Fast deterministic keyword mapping</p>
+                    <p class="resume-text">• LaTeX template + skills categorization</p>
                   </div>
                   <div class="resume-section">
                     <div class="section-title">SKILLS</div>
                     <div class="skill-pills">
                       <span class="pill">Python</span>
-                      <span class="pill">React</span>
-                      <span class="pill">AI/ML</span>
+                      <span class="pill">Flask</span>
+                      <span class="pill">LLM</span>
+                      <span class="pill">ATS</span>
                     </div>
                   </div>
                   <div class="resume-section">
                     <div class="section-title">EDUCATION</div>
-                    <div class="resume-line"></div>
-                    <div class="resume-line short"></div>
+                    <p class="resume-text">Arizona State University (ASU)</p>
                   </div>
                   <div class="ats-badge">✓ ATS Optimized</div>
                 </div>
