--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,12 @@
               <button type="submit">Notify me</button>
             </form>
             <p class="signup-status" id="signup-status"></p>
+
+            <div class="user-count" id="user-count" title="Counts first-time visitors only (per browser)">
+              <span class="label">Early users:</span>
+              <span class="value" id="user-count-value">--</span>
+              <span class="note">(first visit counts; refresh won't)</span>
+            </div>
           </div>
           <div class="right">
             <div class="visual">
@@ -52,7 +58,7 @@
                 <div class="resume-page">
                   <div class="resume-header">
                     <div class="resume-name">RIKIN SHAH</div>
-                    <div class="resume-title">Founder & ATS Optimization Architect</div>
+                    <div class="resume-title">Founder • Emerging AI DevOps</div>
                   </div>
                   <div class="resume-section">
                     <div class="section-title">EXPERIENCE</div>
