SEO: add favicon, robots.txt, sitemap.xml; enhance head meta. Deploy: enable Vercel serverless API (build + routes) for /api/subscribe.

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,55 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>LLMRESUME — AI-powered ATS resume builder</title>
-    <meta name="description" content="LLMRESUME — AI-powered ATS resume builder. Give a job description and get your resume in minutes. Coming soon." />
+    <title>LLM Resume — AI ATS Optimizer | Build a tailored resume in minutes</title>
+    <meta name="description" content="LLM Resume is an AI-powered ATS optimizer. Paste a job description and get a personalized, ATS-friendly resume in minutes. PRO (LLM) + SMART (rule-based)." />
+    <link rel="canonical" href="https://llmresume.com/" />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#0f0820" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://llmresume.com/" />
+    <meta property="og:title" content="LLM Resume — AI ATS Optimizer" />
+    <meta property="og:description" content="Paste a job description and get a personalized, ATS-friendly resume in minutes. PRO (LLM) + SMART (rule-based)." />
+    <meta property="og:image" content="https://llmresume.com/assets/hero.svg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="LLM Resume — AI ATS Optimizer" />
+    <meta name="twitter:description" content="Build ATS-friendly resumes in minutes using AI. PRO + SMART modes." />
+    <meta name="twitter:image" content="https://llmresume.com/assets/hero.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "LLM Resume",
+      "url": "https://llmresume.com/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://llmresume.com/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "LLM Resume",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Web",
+      "description": "AI-powered ATS resume optimizer with PRO (LLM) and SMART (rule-based) modes.",
+      "url": "https://llmresume.com/"
+    }
+    </script>
+
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
